--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div class="container">
             <nav class="navigation">
                 <a class="logo" href="index.html" lang="en"><span class="logo-accent"> Web </span> Studio</a>
+                <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-contaoner" data-menu-button></button>
+                <svg width="40" height="40" aria-label="Переключатель мобильного меню"></svg>
+                <use class="icon-close" href="./images/sprite.svg#icon-close"></use>
+                <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
                 <ul class="menu-nav-list">
                     <li class="menu-nav-list-item">
                         <a class="menu-nav-list-item-link current" href="./index.html ">Студия</a></li>
@@ -117,6 +121,7 @@
             </div>
         </section>
         <section class="section what-we-are-doing">
+            <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="what-we-are-doing-list list">
                 <li class="what-we-are-doing-picture">
@@ -135,6 +140,7 @@
                     <h3 class="section-title-item">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
                 </li>
             </ul>
+        </div>
         </section>
         <!--Команда-->
         <section class="our-team">
