Добавлены menu-btn

--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <!--Шапка сайтa-->
     <header class="header">
         <div class="container header-container">
-            <div class="menu-wrapper">
-                <nav class="navigation">
+           
                     <a class="logo" href="index.html" lang="en"><span class="logo-accent"> Web </span> Studio</a>
                     
-                    <button type="button" class="menu-btn is-open" data-menu-button aria-expanded="false" aria-controls="menu-container">
+                    <button type="button" class="menu-btn is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
                     <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-                                  <use class="close-icon" href="./images/sprite.svg#close-icon"></use>
-                                    <use class= "menu-icon" href="./images/sprite.svg#menu-icon"></use> 
-                </svg>
-                </button>  
+                            <use class="close-icon" href="./images/sprite.svg#close-icon"></use>
+                            <use class= "menu-icon" href="./images/sprite.svg#menu-icon"></use> 
+                    </svg>
+                    </button>  
+            <div class="menu-wrapper">
+                    <nav class="navigation">
                     <ul class="menu-nav-list">
                         <li class="menu-nav-list-item">
                             <a class="menu-nav-list-item-link current" href="./index.html ">Студия</a></li>
@@ -59,7 +60,7 @@
         </div>
     </header>
 
-    <main>
+    <!-- <main> -->
         <!-- Герой! -->
         <!-- <section class="hero">
             <div class="block-hero">
