--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            
                     <a class="logo" href="index.html" lang="en"><span class="logo-accent"> Web </span> Studio</a>
                     
-                    <button type="button" class="menu-btn is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                    <button type="button" class="menu-btn is-open" aria-expanded="false" aria-controls="menu-wrapper" data-menu-button>
                     <svg width="40" height="40" aria-label="Переключатель мобильного меню">
                             <use class="close-icon" href="./images/sprite.svg#close-icon"></use>
                             <use class= "menu-icon" href="./images/sprite.svg#menu-icon"></use> 
